add_executable(hello 01_hello.c)
add_executable(stack 02_stack.c)
add_executable(call_lua_script 03_call_lua_script.c)
add_executable(call_lua_func 04_call_lua_func.c)
add_executable(call_lua_table 05_call_lua_table.c)

add_library(mylib SHARED 06_call_c_func.c)
add_library(split SHARED 07_split_lib.c)
add_library(boolean SHARED 08_boolarray_lib.c)
add_library(sleep SHARED 09_sleep_lib.c)
